--- a/blog.html
+++ b/blog.html
@@ -22,15 +22,15 @@
         <div class="mt-20 max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
             <div class="flex flex-col overflow-hidden rounded-lg border border-[var(--divider-color)] shadow-sm hover:shadow-xl transition-shadow duration-300">
                 <div class="h-48 w-full bg-gray-200"></div>
-                <div class="p-6 flex flex-col flex-1"><h3 class="text-xl font-bold mb-3">Partner Planı Tanıtımı: Biz Kuralım, Siz Yaratın</h3><p class="text-[var(--text-secondary-color)] mb-6 grow">En kapsamlı planımıza derinlemesine bir bakış; en iyi yaptıkları işe odaklanmak isteyen yaratıcılar için tasarlandı.</p><a href="#" class="font-bold text-[var(--primary-color)] hover:underline">Devamını Oku →</a></div>
+                <div class="p-6 flex flex-col flex-1"><h3 class="text-xl font-bold mb-3">Partner Planı Tanıtımı: Biz Kuralım, Siz Yaratın</h3><p class="text-[var(--text-secondary-color)] mb-6 grow">En kapsamlı planımıza derinlemesine bir bakış; en iyi yaptıkları işe odaklanmak isteyen yaratıcılar için tasarlandı.</p><a href="blog-post.html" class="font-bold text-[var(--primary-color)] hover:underline">Devamını Oku →</a></div>
             </div>
             <div class="flex flex-col overflow-hidden rounded-lg border border-[var(--divider-color)] shadow-sm hover:shadow-xl transition-shadow duration-300">
                 <div class="h-48 w-full bg-gray-200"></div>
-                <div class="p-6 flex flex-col flex-1"><h3 class="text-xl font-bold mb-3">Trendyol'da Fiyatlarınızı Optimize Etmenin 5 Yolu</h3><p class="text-[var(--text-secondary-color)] mb-6 grow">Ekobol'ün YZ motorunu kullanarak bugün uygulayabileceğiniz stratejilerle rekabetçi fiyatlandırmanın sırlarını açığa çıkarın.</p><a href="#" class="font-bold text-[var(--primary-color)] hover:underline">Devamını Oku →</a></div>
+                <div class="p-6 flex flex-col flex-1"><h3 class="text-xl font-bold mb-3">Trendyol'da Fiyatlarınızı Optimize Etmenin 5 Yolu</h3><p class="text-[var(--text-secondary-color)] mb-6 grow">Ekobol'ün YZ motorunu kullanarak bugün uygulayabileceğiniz stratejilerle rekabetçi fiyatlandırmanın sırlarını açığa çıkarın.</p><a href="ai-pricing-optimization.html" class="font-bold text-[var(--primary-color)] hover:underline">Devamını Oku →</a></div>
             </div>
             <div class="flex flex-col overflow-hidden rounded-lg border border-[var(--divider-color)] shadow-sm hover:shadow-xl transition-shadow duration-300">
                 <div class="h-48 w-full bg-gray-200"></div>
-                <div class="p-6 flex flex-col flex-1"><h3 class="text-xl font-bold mb-3">Özellik Güncellemesi: Yeni Görüntü Oluşturma Stilleri</h3><p class="text-[var(--text-secondary-color)] mb-6 grow">Ürünlerinizi her platformda öne çıkarmak için üç yeni yapay zeka destekli görüntü stilini kullanıma sunduk.</p><a href="#" class="font-bold text-[var(--primary-color)] hover:underline">Devamını Oku →</a></div>
+                <div class="p-6 flex flex-col flex-1"><h3 class="text-xl font-bold mb-3">Özellik Güncellemesi: Yeni Görüntü Oluşturma Stilleri</h3><p class="text-[var(--text-secondary-color)] mb-6 grow">Ürünlerinizi her platformda öne çıkarmak için üç yeni yapay zeka destekli görüntü stilini kullanıma sunduk.</p><a href="new-image-styles-update.html" class="font-bold text-[var(--primary-color)] hover:underline">Devamını Oku →</a></div>
             </div>
         </div>
     </main>
