--- a/blog_en.html
+++ b/blog_en.html
@@ -22,15 +22,15 @@
         <div class="mt-20 max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
             <div class="flex flex-col overflow-hidden rounded-lg border border-[var(--divider-color)] shadow-sm hover:shadow-xl transition-shadow duration-300">
                 <div class="h-48 w-full bg-gray-200"></div>
-                <div class="p-6 flex flex-col flex-1"><h3 class="text-xl font-bold mb-3">Introducing the Partner Plan: We Build, You Create</h3><p class="text-[var(--text-secondary-color)] mb-6 grow">A deep dive into our most comprehensive plan, designed for creators who want to focus on what they do best.</p><a href="#" class="font-bold text-[var(--primary-color)] hover:underline">Read More →</a></div>
+                <div class="p-6 flex flex-col flex-1"><h3 class="text-xl font-bold mb-3">Introducing the Partner Plan: We Build, You Create</h3><p class="text-[var(--text-secondary-color)] mb-6 grow">A deep dive into our most comprehensive plan, designed for creators who want to focus on what they do best.</p><a href="blog-post_en.html" class="font-bold text-[var(--primary-color)] hover:underline">Read More →</a></div>
             </div>
             <div class="flex flex-col overflow-hidden rounded-lg border border-[var(--divider-color)] shadow-sm hover:shadow-xl transition-shadow duration-300">
                 <div class="h-48 w-full bg-gray-200"></div>
-                <div class="p-6 flex flex-col flex-1"><h3 class="text-xl font-bold mb-3">5 Ways AI Can Optimize Your Pricing on Trendyol</h3><p class="text-[var(--text-secondary-color)] mb-6 grow">Unlock the secrets to competitive pricing with strategies you can implement today using Ekobol's AI engine.</p><a href="#" class="font-bold text-[var(--primary-color)] hover:underline">Read More →</a></div>
+                <div class="p-6 flex flex-col flex-1"><h3 class="text-xl font-bold mb-3">5 Ways AI Can Optimize Your Pricing on Trendyol</h3><p class="text-[var(--text-secondary-color)] mb-6 grow">Unlock the secrets to competitive pricing with strategies you can implement today using Ekobol's AI engine.</p><a href="ai-pricing-optimization_en.html" class="font-bold text-[var(--primary-color)] hover:underline">Read More →</a></div>
             </div>
             <div class="flex flex-col overflow-hidden rounded-lg border border-[var(--divider-color)] shadow-sm hover:shadow-xl transition-shadow duration-300">
                 <div class="h-48 w-full bg-gray-200"></div>
-                <div class="p-6 flex flex-col flex-1"><h3 class="text-xl font-bold mb-3">Feature Update: New Image Generation Styles</h3><p class="text-[var(--text-secondary-color)] mb-6 grow">We've just rolled out three new AI-powered image styles to make your products stand out on any platform.</p><a href="#" class="font-bold text-[var(--primary-color)] hover:underline">Read More →</a></div>
+                <div class="p-6 flex flex-col flex-1"><h3 class="text-xl font-bold mb-3">Feature Update: New Image Generation Styles</h3><p class="text-[var(--text-secondary-color)] mb-6 grow">We've just rolled out three new AI-powered image styles to make your products stand out on any platform.</p><a href="new-image-styles-update_en.html" class="font-bold text-[var(--primary-color)] hover:underline">Read More →</a></div>
             </div>
         </div>
     </main>
