--- a/help-center.html
+++ b/help-center.html
@@ -29,15 +29,28 @@
                  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="bg-white border border-[var(--divider-color)] p-8 rounded-lg">
                         <h3 class="font-bold text-xl mb-4">Başlarken</h3>
-                        <ul class="space-y-3"><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">İlk pazar yerinizi bağlama</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Profilinizi ayarlama</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Kontrol panelini anlama</li></ul>
+                        <ul class="space-y-3">
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="connect-marketplace-guide.html">İlk pazar yerinizi bağlama</a></li>
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="setup-profile-guide.html">Profilinizi ayarlama</a></li>
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="understanding-dashboard-guide.html">Kontrol panelini anlama</a></li>
+                        </ul>
                     </div>
                     <div class="bg-white border border-[var(--divider-color)] p-8 rounded-lg">
                         <h3 class="font-bold text-xl mb-4">YZ Araçları</h3>
-                        <ul class="space-y-3"><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Görüntü Oluşturucu nasıl kullanılır</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">YZ açıklamaları için en iyi pratikler</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">YZ ile fiyatlandırmanızı optimize etme</li></ul>
+                        <ul class="space-y-3">
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="ai-image-generator-guide.html">Görüntü Oluşturucu nasıl kullanılır</a></li>
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="best-practices-ai-descriptions.html">YZ açıklamaları için en iyi pratikler</a></li>
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="optimize-pricing-with-ai-guide.html">YZ ile fiyatlandırmanızı optimize etme</a></li>
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="ai-inventory-automation-guide.html">YZ ile envanter otomasyonu</a></li>
+                        </ul>
                     </div>
                     <div class="bg-white border border-[var(--divider-color)] p-8 rounded-lg">
                         <h3 class="font-bold text-xl mb-4">Faturalandırma ve Planlar</h3>
-                        <ul class="space-y-3"><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Gelir paylaşımı nasıl çalışır</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Planınızı yükseltme veya düşürme</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Faturalarınızı görüntüleme</li></ul>
+                        <ul class="space-y-3">
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="how-revenue-sharing-works-guide.html">Gelir paylaşımı nasıl çalışır</a></li>
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="upgrade-downgrade-plan-guide.html">Planınızı yükseltme veya düşürme</a></li>
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="viewing-invoices-guide.html">Faturalarınızı görüntüleme</a></li>
+                        </ul>
                     </div>
                  </div>
             </div>
