--- a/help-center_en.html
+++ b/help-center_en.html
@@ -29,15 +29,28 @@
                  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="bg-white border border-[var(--divider-color)] p-8 rounded-lg">
                         <h3 class="font-bold text-xl mb-4">Getting Started</h3>
-                        <ul class="space-y-3"><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Connecting your first marketplace</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Setting up your profile</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Understanding the dashboard</li></ul>
+                        <ul class="space-y-3">
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="connect-marketplace-guide_en.html">Connecting your first marketplace</a></li>
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="setup-profile-guide_en.html">Setting up your profile</a></li>
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="understanding-dashboard-guide_en.html">Understanding the dashboard</a></li>
+                        </ul>
                     </div>
                     <div class="bg-white border border-[var(--divider-color)] p-8 rounded-lg">
                         <h3 class="font-bold text-xl mb-4">AI Tools</h3>
-                        <ul class="space-y-3"><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">How to use the Image Generator</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Best practices for AI descriptions</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Optimizing your pricing with AI</li></ul>
+                        <ul class="space-y-3">
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="ai-image-generator-guide_en.html">How to use the Image Generator</a></li>
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="best-practices-ai-descriptions_en.html">Best practices for AI descriptions</a></li>
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="optimize-pricing-with-ai-guide_en.html">Optimizing your pricing with AI</a></li>
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="ai-inventory-automation-guide_en.html">AI inventory automation</a></li>
+                        </ul>
                     </div>
                     <div class="bg-white border border-[var(--divider-color)] p-8 rounded-lg">
                         <h3 class="font-bold text-xl mb-4">Billing and Plans</h3>
-                        <ul class="space-y-3"><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">How revenue sharing works</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Upgrading or downgrading your plan</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Viewing your invoices</li></ul>
+                        <ul class="space-y-3">
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="how-revenue-sharing-works-guide_en.html">How revenue sharing works</a></li>
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="upgrade-downgrade-plan-guide_en.html">Upgrading or downgrading your plan</a></li>
+                            <li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer"><a href="viewing-invoices-guide_en.html">Viewing your invoices</a></li>
+                        </ul>
                     </div>
                  </div>
             </div>
