--- a/products-manage_en.html
+++ b/products-manage_en.html
@@ -101,7 +101,7 @@
                                 </td>
                                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                                     <a href="product-add-edit_en.html?id=OCTS001" class="text-[var(--primary-color)] hover:text-[var(--primary-color)]-dark">Edit</a>
-                                    <a href="#" class="ml-4 text-indigo-600 hover:text-indigo-900">View Live</a>
+                                    <a href="product-display_en.html?sku=OCTS001" class="ml-4 text-indigo-600 hover:text-indigo-900">View Live</a>
                                 </td>
                             </tr>
                             <tr class="product-row" data-channels="etsy,hepsiburada" data-status="oos" data-product-name="Handmade Ceramic Mug" data-sku="HCM002">
@@ -180,7 +180,7 @@
                                 </td>
                                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                                     <a href="product-add-edit_en.html?id=EOC004" class="text-[var(--primary-color)] hover:text-[var(--primary-color)]-dark">Edit</a>
-                                    <a href="#" class="ml-4 text-indigo-600 hover:text-indigo-900">View Live</a>
+                                    <a href="product-display_en.html?sku=EOC004" class="ml-4 text-indigo-600 hover:text-indigo-900">View Live</a>
                                 </td>
                             </tr>
                             <tr class="product-row" data-channels="hepsiburada" data-status="active" data-product-name="Bluetooth Speaker" data-sku="BTSP005">
@@ -206,7 +206,7 @@
                                 </td>
                                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                                     <a href="product-add-edit_en.html?id=BTSP005" class="text-[var(--primary-color)] hover:text-[var(--primary-color)]-dark">Edit</a>
-                                    <a href="#" class="ml-4 text-indigo-600 hover:text-indigo-900">View Live</a>
+                                    <a href="product-display_en.html?sku=BTSP005" class="ml-4 text-indigo-600 hover:text-indigo-900">View Live</a>
                                 </td>
                             </tr>
                         </tbody>
@@ -217,18 +217,18 @@
             <!-- Pagination Placeholder -->
             <section class="mt-8 flex justify-center">
                 <nav class="relative z-0 inline-flex rounded-md shadow-sm -space-x-px" aria-label="Pagination">
-                    <a href="#" class="relative inline-flex items-center px-2 py-2 rounded-l-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
+                    <a href="products-manage_en.html?page=1" class="relative inline-flex items-center px-2 py-2 rounded-l-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
                         <span class="sr-only">Previous</span>
                         <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                             <path fill-rule="evenodd" d="M12.79 5.23a.75.75 0 01-.02 1.06L8.832 10l3.938 3.71a.75.75 0 11-1.04 1.08l-4.5-4.25a.75.75 0 010-1.08l4.5-4.25a.75.75 0 011.06.02z" clip-rule="evenodd" />
                         </svg>
                     </a>
-                    <a href="#" aria-current="page" class="z-10 bg-[var(--primary-color)] border-[var(--primary-color)] text-white relative inline-flex items-center px-4 py-2 text-sm font-medium">1</a>
-                    <a href="#" class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50">2</a>
-                    <a href="#" class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50">3</a>
+                    <a href="products-manage_en.html?page=1" aria-current="page" class="z-10 bg-[var(--primary-color)] border-[var(--primary-color)] text-white relative inline-flex items-center px-4 py-2 text-sm font-medium">1</a>
+                    <a href="products-manage_en.html?page=2" class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50">2</a>
+                    <a href="products-manage_en.html?page=3" class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50">3</a>
                     <span class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700">...</span>
-                    <a href="#" class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50">10</a>
-                    <a href="#" class="relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
+                    <a href="products-manage_en.html?page=10" class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50">10</a>
+                    <a href="products-manage_en.html?page=2" class="relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
                         <span class="sr-only">Next</span>
                         <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                             <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
