--- a/resources_en.html
+++ b/resources_en.html
@@ -23,22 +23,22 @@
             <div class="border border-[var(--divider-color)] rounded-lg p-8 hover:shadow-xl hover:-translate-y-1 transition-all duration-300">
                 <h3 class="text-2xl font-bold mb-3">The Ekobol Blog</h3>
                 <p class="text-[var(--text-secondary-color)] mb-6">Stay updated with the latest e-commerce trends, AI strategies, and tips for multi-marketplace success.</p>
-                <a href="blog.html" class="font-bold text-[var(--primary-color)] hover:underline">Read Now →</a>
+                <a href="blog_en.html" class="font-bold text-[var(--primary-color)] hover:underline">Read Now →</a>
             </div>
             <div class="border border-[var(--divider-color)] rounded-lg p-8 hover:shadow-xl hover:-translate-y-1 transition-all duration-300">
                 <h3 class="text-2xl font-bold mb-3">Success Stories</h3>
                 <p class="text-[var(--text-secondary-color)] mb-6">See how real businesses have scaled their operations and boosted revenue with Ekobol.</p>
-                <a href="success-stories.html" class="font-bold text-[var(--primary-color)] hover:underline">See the Results →</a>
+                <a href="success-stories_en.html" class="font-bold text-[var(--primary-color)] hover:underline">See the Results →</a>
             </div>
             <div class="border border-[var(--divider-color)] rounded-lg p-8 hover:shadow-xl hover:-translate-y-1 transition-all duration-300">
                 <h3 class="text-2xl font-bold mb-3">Help Center & Docs</h3>
                 <p class="text-[var(--text-secondary-color)] mb-6">Find step-by-step guides, technical documentation, and answers to frequently asked questions.</p>
-                <a href="help-center.html" class="font-bold text-[var(--primary-color)] hover:underline">Get Support →</a>
+                <a href="help-center_en.html" class="font-bold text-[var(--primary-color)] hover:underline">Get Support →</a>
             </div>
             <div class="border border-[var(--divider-color)] rounded-lg p-8 hover:shadow-xl hover:-translate-y-1 transition-all duration-300">
                 <h3 class="text-2xl font-bold mb-3">Webinars & Tutorials</h3>
                 <p class="text-[var(--text-secondary-color)] mb-6">Watch on-demand webinars and video tutorials to master Ekobol's features and advanced e-commerce strategies.</p>
-                <a href="#" class="font-bold text-[var(--primary-color)] hover:underline">Watch & Learn →</a>
+                <a href="webinars_en.html" class="font-bold text-[var(--primary-color)] hover:underline">Watch & Learn →</a>
             </div>
         </div>
     </main>
