--- a/orders.html
+++ b/orders.html
@@ -81,8 +81,8 @@
                                     <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800">Gönderildi</span>
                                 </td>
                                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                                    <a href="#" class="text-[var(--primary-color)] hover:text-[var(--primary-color)]-dark">Görüntüle</a>
-                                    <a href="#" class="ml-4 text-indigo-600 hover:text-indigo-900">Takip Et</a>
+                                    <a href="order-detail.html?orderId=E10023" class="text-[var(--primary-color)] hover:text-[var(--primary-color)]-dark">Görüntüle</a>
+                                    <a href="order-tracking.html?orderId=E10023" class="ml-4 text-indigo-600 hover:text-indigo-900">Takip Et</a>
                                 </td>
                             </tr>
                             <tr class="order-row" data-channel="trendyol" data-status="pending" data-order-id="#T20056">
@@ -95,7 +95,7 @@
                                     <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-yellow-100 text-yellow-800">Beklemede</span>
                                 </td>
                                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                                    <a href="#" class="text-[var(--primary-color)] hover:text-[var(--primary-color)]-dark">Görüntüle</a>
+                                    <a href="order-detail.html?orderId=T20056" class="text-[var(--primary-color)] hover:text-[var(--primary-color)]-dark">Görüntüle</a>
                                     <a href="#" class="ml-4 text-indigo-600 hover:text-indigo-900">Gönderildi Olarak İşaretle</a>
                                 </td>
                             </tr>
@@ -109,8 +109,8 @@
                                     <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-blue-100 text-blue-800">Teslim Edildi</span>
                                 </td>
                                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                                    <a href="#" class="text-[var(--primary-color)] hover:text-[var(--primary-color)]-dark">Görüntüle</a>
-                                    <a href="#" class="ml-4 text-purple-600 hover:text-purple-900">Fatura</a>
+                                    <a href="order-detail.html?orderId=H30011" class="text-[var(--primary-color)] hover:text-[var(--primary-color)]-dark">Görüntüle</a>
+                                    <a href="invoice.html?invoiceId=INV20250709-H30011" class="ml-4 text-purple-600 hover:text-purple-900">Fatura</a>
                                 </td>
                             </tr>
                             <tr class="order-row" data-channel="website" data-status="pending" data-order-id="#W40078">
@@ -123,7 +123,7 @@
                                     <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-yellow-100 text-yellow-800">Beklemede</span>
                                 </td>
                                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                                    <a href="#" class="text-[var(--primary-color)] hover:text-[var(--primary-color)]-dark">Görüntüle</a>
+                                    <a href="order-detail.html?orderId=W40078" class="text-[var(--primary-color)] hover:text-[var(--primary-color)]-dark">Görüntüle</a>
                                     <a href="#" class="ml-4 text-indigo-600 hover:text-indigo-900">Gönderildi Olarak İşaretle</a>
                                 </td>
                             </tr>
@@ -137,7 +137,7 @@
                                     <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-blue-100 text-blue-800">Teslim Edildi</span>
                                 </td>
                                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                                    <a href="#" class="text-[var(--primary-color)] hover:text-[var(--primary-color)]-dark">Görüntüle</a>
+                                    <a href="order-detail.html?orderId=E10021" class="text-[var(--primary-color)] hover:text-[var(--primary-color)]-dark">Görüntüle</a>
                                 </td>
                             </tr>
                             <tr class="order-row" data-channel="trendyol" data-status="shipped" data-order-id="#T20055">
@@ -150,8 +150,8 @@
                                     <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800">Gönderildi</span>
                                 </td>
                                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                                    <a href="#" class="text-[var(--primary-color)] hover:text-[var(--primary-color)]-dark">Görüntüle</a>
-                                    <a href="#" class="ml-4 text-indigo-600 hover:text-indigo-900">Takip Et</a>
+                                    <a href="order-detail.html?orderId=T20055" class="text-[var(--primary-color)] hover:text-[var(--primary-color)]-dark">Görüntüle</a>
+                                    <a href="order-tracking.html?orderId=T20055" class="ml-4 text-indigo-600 hover:text-indigo-900">Takip Et</a>
                                 </td>
                             </tr>
                             <tr class="order-row" data-channel="hepsiburada" data-status="cancelled" data-order-id="#H30010">
@@ -164,7 +164,7 @@
                                     <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-red-100 text-red-800">İptal Edildi</span>
                                 </td>
                                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                                    <a href="#" class="text-[var(--primary-color)] hover:text-[var(--primary-color)]-dark">Görüntüle</a>
+                                    <a href="order-detail.html?orderId=H30010" class="text-[var(--primary-color)] hover:text-[var(--primary-color)]-dark">Görüntüle</a>
                                 </td>
                             </tr>
                         </tbody>
@@ -175,18 +175,18 @@
             <!-- Pagination Placeholder -->
             <section class="mt-8 flex justify-center">
                 <nav class="relative z-0 inline-flex rounded-md shadow-sm -space-x-px" aria-label="Pagination">
-                    <a href="#" class="relative inline-flex items-center px-2 py-2 rounded-l-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
+                    <a href="orders.html?page=1" class="relative inline-flex items-center px-2 py-2 rounded-l-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
                         <span class="sr-only">Önceki</span>
                         <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                             <path fill-rule="evenodd" d="M12.79 5.23a.75.75 0 01-.02 1.06L8.832 10l3.938 3.71a.75.75 0 11-1.04 1.08l-4.5-4.25a.75.75 0 010-1.08l4.5-4.25a.75.75 0 011.06.02z" clip-rule="evenodd" />
                         </svg>
                     </a>
-                    <a href="#" aria-current="page" class="z-10 bg-[var(--primary-color)] border-[var(--primary-color)] text-white relative inline-flex items-center px-4 py-2 text-sm font-medium">1</a>
-                    <a href="#" class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50">2</a>
-                    <a href="#" class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50">3</a>
+                    <a href="orders.html?page=1" aria-current="page" class="z-10 bg-[var(--primary-color)] border-[var(--primary-color)] text-white relative inline-flex items-center px-4 py-2 text-sm font-medium">1</a>
+                    <a href="orders.html?page=2" class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50">2</a>
+                    <a href="orders.html?page=3" class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50">3</a>
                     <span class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700">...</span>
-                    <a href="#" class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50">10</a>
-                    <a href="#" class="relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
+                    <a href="orders.html?page=10" class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50">10</a>
+                    <a href="orders.html?page=2" class="relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
                         <span class="sr-only">Sonraki</span>
                         <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                             <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
@@ -206,7 +206,7 @@
 <!-- Load our app script at the end of the body -->
 <script src="app.js"></script>
 
-<!-- Orders Page Specific Script -->
+<!-- Orders Page Specific Script (retained for filtering functionality) -->
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         const channelFilter = document.getElementById('channel-filter');
