--- a/resources.html
+++ b/resources.html
@@ -38,7 +38,7 @@
             <div class="border border-[var(--divider-color)] rounded-lg p-8 hover:shadow-xl hover:-translate-y-1 transition-all duration-300">
                 <h3 class="text-2xl font-bold mb-3">Webinarlar & Eğitimler</h3>
                 <p class="text-[var(--text-secondary-color)] mb-6">Ekobol'ün özelliklerini ve gelişmiş e-ticaret stratejilerini öğrenmek için talep üzerine webinarları ve video eğitimlerini izleyin.</p>
-                <a href="#" class="font-bold text-[var(--primary-color)] hover:underline">İzle & Öğren →</a>
+                <a href="webinars.html" class="font-bold text-[var(--primary-color)] hover:underline">İzle & Öğren →</a>
             </div>
         </div>
     </main>
