--- a/marketing-tools.html
+++ b/marketing-tools.html
@@ -33,7 +33,10 @@
 
             <!-- AI Ad Campaign Generator -->
             <section class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6 mb-8">
-                <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight mb-4">YZ Reklam Kampanyası Oluşturucu</h2>
+                <div class="flex justify-between items-center mb-4">
+                    <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight">YZ Reklam Kampanyası Oluşturucu</h2>
+                    <a href="ai-marketing-campaigns-guide.html" class="text-sm font-medium text-[var(--primary-color)] hover:underline">Nasıl Kullanılır? →</a>
+                </div>
                 <p class="text-[var(--text-secondary-color)] mb-4">YZ'mizin ürünleriniz için optimize edilmiş reklam metinleri ve hedef kitleler oluşturmasına izin verin.</p>
                 <form class="space-y-4">
                     <div>
@@ -68,7 +71,10 @@
 
             <!-- SEO Optimization Tools -->
             <section class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6 mb-8">
-                <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight mb-4">SEO Optimizasyon Araçları</h2>
+                <div class="flex justify-between items-center mb-4">
+                    <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight">SEO Optimizasyon Araçları</h2>
+                    <a href="seo-optimization-tools-guide.html" class="text-sm font-medium text-[var(--primary-color)] hover:underline">Nasıl Kullanılır? →</a>
+                </div>
                 <p class="text-[var(--text-secondary-color)] mb-4">Pazaryerlerinde ve arama motorlarında ürün görünürlüğünüzü artırın.</p>
                 <form class="space-y-4">
                     <div>
@@ -100,7 +106,10 @@
 
             <!-- Social Media Scheduler -->
             <section class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6">
-                <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight mb-4">Sosyal Medya Zamanlayıcısı</h2>
+                <div class="flex justify-between items-center mb-4">
+                    <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight">Sosyal Medya Zamanlayıcısı</h2>
+                    <a href="social-media-scheduler-guide.html" class="text-sm font-medium text-[var(--primary-color)] hover:underline">Nasıl Kullanılır? →</a>
+                </div>
                 <p class="text-[var(--text-secondary-color)] mb-4">Sosyal medya gönderilerinizi platformlar arasında planlayın ve zamanlayın.</p>
                 <form class="space-y-4">
                     <div>
