--- a/marketing-tools_en.html
+++ b/marketing-tools_en.html
@@ -33,7 +33,10 @@
 
             <!-- AI Ad Campaign Generator -->
             <section class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6 mb-8">
-                <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight mb-4">AI Ad Campaign Generator</h2>
+                <div class="flex justify-between items-center mb-4">
+                    <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight">AI Ad Campaign Generator</h2>
+                    <a href="ai-marketing-campaigns-guide_en.html" class="text-sm font-medium text-[var(--primary-color)] hover:underline">How To Use? →</a>
+                </div>
                 <p class="text-[var(--text-secondary-color)] mb-4">Let our AI create optimized ad copies and target audiences for your products.</p>
                 <form class="space-y-4">
                     <div>
@@ -68,7 +71,10 @@
 
             <!-- SEO Optimization Tools -->
             <section class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6 mb-8">
-                <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight mb-4">SEO Optimization Tools</h2>
+                <div class="flex justify-between items-center mb-4">
+                    <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight">SEO Optimization Tools</h2>
+                    <a href="seo-optimization-tools-guide_en.html" class="text-sm font-medium text-[var(--primary-color)] hover:underline">How To Use? →</a>
+                </div>
                 <p class="text-[var(--text-secondary-color)] mb-4">Improve your product visibility on marketplaces and search engines.</p>
                 <form class="space-y-4">
                     <div>
@@ -100,7 +106,10 @@
 
             <!-- Social Media Scheduler -->
             <section class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6">
-                <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight mb-4">Social Media Scheduler</h2>
+                <div class="flex justify-between items-center mb-4">
+                    <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight">Social Media Scheduler</h2>
+                    <a href="social-media-scheduler-guide_en.html" class="text-sm font-medium text-[var(--primary-color)] hover:underline">How To Use? →</a>
+                </div>
                 <p class="text-[var(--text-secondary-color)] mb-4">Plan and schedule your social media posts across platforms.</p>
                 <form class="space-y-4">
                     <div>
