--- a/privacy.html
+++ b/privacy.html
@@ -46,8 +46,8 @@
             <h2>4. Veri Haklarınız</h2>
             <p>Sizinle ilgili elimizdeki bilgilere erişme, bunları güncelleme veya silme hakkına sahipsiniz. Mümkün olduğunda, Kişisel Verilerinize doğrudan hesap ayarları bölümünüzden erişebilir, bunları güncelleyebilir veya silinmesini talep edebilirsiniz. Bu işlemleri kendiniz gerçekleştiremiyorsanız, size yardımcı olmamız için lütfen bizimle iletişime geçin.</p>
 
-            <h2>5. Bu Gizlilik Politikasındaki Değişiklikler</h2>
-            <p>Gizlilik Politikamızı zaman zaman güncelleyebiliriz. Yeni Gizlilik Politikasını bu sayfada yayınlayarak herhangi bir değişiklik hakkında sizi bilgilendireceğiz. Herhangi bir değişiklik için bu Gizlilik Politikasını periyodik olarak gözden geçirmeniz tavsiye edilir.</p>
+            <h2>5. Bu Gizlilik Politikası'ndaki Değişiklikler</h2>
+            <p>Gizlilik Politikamızı zaman zaman güncelleyebiliriz. Yeni Gizlilik Politikası'nı bu sayfada yayınlayarak herhangi bir değişiklik hakkında sizi bilgilendireceğiz. Herhangi bir değişiklik için bu Gizlilik Politikası'nı periyodik olarak gözden geçirmeniz tavsiye edilir.</p>
 
             <h2>6. Bize Ulaşın</h2>
             <p>Bu Gizlilik Politikası hakkında herhangi bir sorunuz varsa, lütfen bizimle legal@ekobol.com adresinden iletişime geçin.</p>
