--- a/terms.html
+++ b/terms.html
@@ -47,7 +47,7 @@
             <p>Bu Şartları herhangi bir zamanda, tamamen kendi takdirimize bağlı olarak değiştirme veya yenileme hakkını saklı tutarız. Yeni şartların yürürlüğe girmesinden en az 30 gün önce bildirimde bulunacağız. Bu revizyonlar yürürlüğe girdikten sonra hizmetimize erişmeye veya hizmetimizi kullanmaya devam ederek, revize edilmiş şartlara bağlı kalmayı kabul edersiniz.</p>
 
             <h2>9. Bize Ulaşın</h2>
-            <p>Bu Şartlar hakkında herhangi bir sorunuz varsa, lütfen bizimle legal@ekobol.com adresinden iletişime geçin.</p>
+            <p>Bu Şartlar hakkında herhangi bir sorunuz varsa, lütfen bizimle <a href="mailto:legal@ekobol.com" class="text-[var(--primary-color)] hover:underline">legal@ekobol.com</a> adresinden iletişime geçin veya <a href="help-center.html" class="text-[var(--primary-color)] hover:underline">Yardım Merkezimizi ziyaret edin.</a></p>
         </div>
     </main>
 
