--- a/terms_en.html
+++ b/terms_en.html
@@ -14,7 +14,7 @@
 <div class="relative flex size-full min-h-screen flex-col group/design-root overflow-x-hidden">
 <div class="layout-container flex h-full grow flex-col">
     <!-- Header -->
-    <header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-[var(--divider-color)] px-10 py-4"><!-- Full header code goes here --></header>
+    <div id="header-placeholder"></div>
 
     <!-- Main Content -->
     <main class="flex-1 px-4 sm:px-10 lg:px-20 py-16 lg:py-24">
@@ -48,12 +48,12 @@
             <p>We reserve the right, at our sole discretion, to modify or replace these Terms at any time. We will provide at least 30 days' notice prior to any new terms taking effect. By continuing to access or use our service after those revisions become effective, you agree to be bound by the revised terms.</p>
 
             <h2>9. Contact Us</h2>
-            <p>If you have any questions about these Terms, please contact us at legal@ekobol.com.</p>
+            <p>If you have any questions about these Terms, please contact us at <a href="mailto:legal@ekobol.com" class="text-[var(--primary-color)] hover:underline">legal@ekobol.com</a> or <a href="help-center_en.html" class="text-[var(--primary-color)] hover:underline">visit our Help Center.</a></p>
         </div>
     </main>
 
     <!-- Footer -->
-    <footer class="bg-gray-50 text-[var(--text-secondary-color)] px-10 py-12"><!-- Full footer code goes here --></footer>
+    <div id="footer-placeholder"></div>
 </div>
 </div>
 </body>
