--- a/trends_en.html
+++ b/trends_en.html
@@ -28,7 +28,7 @@
                     <a class="flex items-center justify-center py-4 px-1 active-tab" href="trends_en.html">
                         <span class="text-sm font-semibold">Trends</span>
                     </a>
-                    <a class="flex items-center justify-center py-4 px-1 inactive-tab" href="#">
+                    <a class="flex items-center justify-center py-4 px-1 inactive-tab" href="live-analytics_en.html">
                         <span class="text-sm font-semibold">Live</span>
                     </a>
                 </nav>
