--- a/basic-plan.html
+++ b/basic-plan.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="utf-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Temel Plan - Ekobol</title>
-    <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
-    <link as="style" href="https://fonts.googleapis.com/css2?display=swap&family=Inter:wght@400;500;700;900&family=Noto+Sans:wght@400;500;700;900" onload="this.rel='stylesheet'" rel="stylesheet"/>
-    <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <link rel="stylesheet" href="global.css">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Temel Plan - Ekobol</title>
+<link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
+<link as="style" href="https://fonts.googleapis.com/css2?display=swap&family=Inter:wght@400;500;700;900&family=Noto+Sans:wght@400;500;700;900" onload="this.rel='stylesheet'" rel="stylesheet"/>
+<link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
+<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+<link rel="stylesheet" href="global.css">
 </head>
 <body class="bg-[var(--background-color)] text-[var(--text-primary-color)]">
 <div class="relative flex size-full min-h-screen flex-col group/design-root overflow-x-hidden">
 <div class="layout-container flex h-full grow flex-col">
-    <div id="header-placeholder"></div>
-    <main class="flex-1 px-4 sm:px-10 lg:px-20 py-16 lg:py-24">
-        <div class="max-w-4xl mx-auto">
-            <div class="text-center">
-                <h1 class="text-4xl md:text-5xl font-extrabold tracking-tighter leading-tight mb-6">Temel Plan: Yapay Zeka Süper Güçleriniz</h1>
-                <p class="text-lg md:text-xl text-[var(--text-secondary-color)] max-w-3xl mx-auto">
-                    Kontrolü elinizde tutmayı seviyor ama tekrarlayan işlerden nefret mi ediyorsunuz? Temel Plan, işinizi otomatikleştirmek ve büyütmek için ihtiyacınız olan her şeyi sunar.
-                </p>
-            </div>
-            <div class="mt-16 bg-gray-50 border border-[var(--divider-color)] rounded-lg p-12">
-                <h2 class="text-3xl font-bold text-center mb-8">Neler Dahil?</h2>
-                <ul class="space-y-4 text-lg text-[var(--text-secondary-color)] max-w-2xl mx-auto">
-                    <li class="flex items-start"><svg class="h-7 w-7 text-[var(--primary-color)] mr-4 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg><span><strong class="text-[var(--text-primary-color)]">Tam Platform Erişimi:</strong> Ekobol'ün tüm özelliklerine sınırsız erişim.</span></li>
-                    <li class="flex items-start"><svg class="h-7 w-7 text-[var(--primary-color)] mr-4 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg><span><strong class="text-[var(--text-primary-color)]">Tüm YZ Araçları:</strong> Görüntü oluşturma, açıklama yazma, fiyat optimizasyonu ve envanter otomasyonu.</span></li>
-                    <li class="flex items-start"><svg class="h-7 w-7 text-[var(--primary-color)] mr-4 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg><span><strong class="text-[var(--text-primary-color)]">Çoklu Kanal Entegrasyonu:</strong> Trendyol, Etsy, Amazon ve daha fazlasını sorunsuzca bağlayın.</span></li>
-                    <li class="flex items-start"><svg class="h-7 w-7 text-[var(--primary-color)] mr-4 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg><span><strong class="text-[var(--text-primary-color)]">Birleşik Kontrol Paneli:</strong> Tüm işinizi tek bir yerden yönetin ve analiz edin.</span></li>
-                </ul>
-            </div>
-            <div class="mt-12 text-center">
-                 <p class="text-4xl font-bold mb-4">Sadece 10%<span class="text-lg font-medium text-[var(--text-secondary-color)]"> / kârdan</span></p>
-                <p class="text-lg text-[var(--text-secondary-color)] max-w-2xl mx-auto mb-8">Stratejinizi siz yönetin, biz sıkıcı görevleri otomatikleştirelim ve size en değerli varlığınız olan zamanı geri verelim.</p>
-                <a class="inline-flex min-w-[200px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-[var(--primary-color)] text-white text-base font-bold leading-normal tracking-wide shadow-lg hover:shadow-xl transition-shadow duration-300" href="payment.html">
-                    <span class="truncate">Temel Planı Satın Al</span>
-                </a>
-            </div>
-        </div>
-    </main>
-    <div id="footer-placeholder"></div>
+<div id="header-placeholder"></div>
+<main class="flex-1 px-4 sm:px-10 lg:px-20 py-16 lg:py-24">
+<div class="max-w-4xl mx-auto">
+<div class="text-center">
+<h1 class="text-4xl md:text-5xl font-extrabold tracking-tighter leading-tight mb-6">Temel Plan: Yapay Zeka Süper Güçleriniz</h1>
+<p class="text-lg md:text-xl text-[var(--text-secondary-color)] max-w-3xl mx-auto">
+Kontrol sizde olsun ama tekrarlayan işlerden nefret mi ediyorsunuz? Temel Plan, işlerinizi otomatikleştirmeniz ve büyümeniz için ihtiyacınız olan her şeyi sunar.
+</p>
+</div>
+<div class="mt-16 bg-gray-50 border border-[var(--divider-color)] rounded-lg p-12">
+<h2 class="text-3xl font-bold text-center mb-8">Neler Dahil?</h2>
+<ul class="space-y-4 text-lg text-[var(--text-secondary-color)] max-w-2xl mx-auto">
+<li class="flex items-start"><svg class="h-7 w-7 text-[var(--primary-color)] mr-4 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg><span><strong class="text-[var(--text-primary-color)]">Tam Platform Erişimi:</strong> Ekobol'un tüm özelliklerine sınırsız erişim.</span></li>
+<li class="flex items-start"><svg class="h-7 w-7 text-[var(--primary-color)] mr-4 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg><span><strong class="text-[var(--text-primary-color)]">Tüm Yapay Zeka Araçları:</strong> Görsel oluşturma, açıklama yazma, fiyat optimizasyonu ve envanter otomasyonu.</span></li>
+<li class="flex items-start"><svg class="h-7 w-7 text-[var(--primary-color)] mr-4 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg><span><strong class="text-[var(--text-primary-color)]">Çok Kanallı Entegrasyon:</strong> Trendyol, Etsy, Amazon ve daha fazlasını sorunsuz bir şekilde bağlayın.</span></li>
+<li class="flex items-start"><svg class="h-7 w-7 text-[var(--primary-color)] mr-4 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg><span><strong class="text-[var(--text-primary-color)]">Birleşik Kontrol Paneli:</strong> Tüm işinizi tek bir yerden yönetin ve analiz edin.</span></li>
+</ul>
+</div>
+<div class="mt-12 text-center">
+<p class="text-4xl font-bold mb-4">Sadece %10<span class="text-lg font-medium text-[var(--text-secondary-color)]"> / kârdan</span></p>
+<p class="text-lg text-[var(--text-secondary-color)] max-w-2xl mx-auto mb-8">Stratejinizi siz belirleyin, biz de sıkıcı görevleri otomatikleştirelim ve size en değerli varlığınız olan zamanı geri verelim.</p>
+<a class="inline-flex min-w-[200px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-[var(--primary-color)] text-white text-base font-bold leading-normal tracking-wide shadow-lg hover:shadow-xl transition-shadow duration-300" href="payment_en.html">
+<span class="truncate">Temel Planı Satın Al</span>
+</a>
+</div>
+</div>
+</main>
+<div id="footer-placeholder"></div>
 </div>
 </div>
 <script src="app.js"></script>
