--- a/trends.html
+++ b/trends.html
@@ -28,7 +28,7 @@
                     <a class="flex items-center justify-center py-4 px-1 active-tab" href="trends.html">
                         <span class="text-sm font-semibold">Eğilimler</span>
                     </a>
-                    <a class="flex items-center justify-center py-4 px-1 inactive-tab" href="#">
+                    <a class="flex items-center justify-center py-4 px-1 inactive-tab" href="live-analytics.html">
                         <span class="text-sm font-semibold">Canlı</span>
                     </a>
                 </nav>
