--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <base href="/ekobol/">
     <meta charset="utf-8" />
-    <!-- ÖNEMLİ: Artık tüm yollar göreli; başında / yok -->
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Ekobol" />
-    <link rel="apple-touch-icon" href="./logo192.png" />
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="manifest" href="manifest.json" />
     <title>Ekobol</title>
-
-    <!-- CSS önce -->
-    <link rel="stylesheet" href="./static/css/main.8669f810.css" />
+    <link rel="stylesheet" href="static/css/main.8669f810.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
-    <!-- JS en sonda, defer'a gerek yok -->
-    <script src="./static/js/main.0c2eaf6e.js"></script>
+    <script src="static/js/main.0c2eaf6e.js"></script>
   </body>
 </html>
