--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <base href="/ekobol/">
     <meta charset="utf-8" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="/ekobol/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Ekobol" />
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="apple-touch-icon" href="/ekobol/logo192.png" />
+    <link rel="manifest" href="/ekobol/manifest.json" />
     <title>Ekobol</title>
-    <link rel="stylesheet" href="static/css/main.8669f810.css" />
+
+    <link rel="stylesheet" href="/ekobol/static/css/main.8669f810.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="static/js/main.0c2eaf6e.js"></script>
+
+    <script src="/ekobol/static/js/main.0c2eaf6e.js"></script>
   </body>
 </html>
